# codebase-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  claude.yml
.plans/: 001-drop-openai-dependency.md  002-cross-mcp-improvements.md  libsql-migration.md
src/codebase_rag/: __init__.py  server.py
tests/: __init__.py  test_server.py
