[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-rag"
version = "0.2.0"
description = "MCP server for codebase indexing with Tree-sitter parsing and libSQL hybrid search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "libsql-experimental>=0.0.50",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-lua>=0.1.0",
    "tree-sitter-bash>=0.22.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
]

[project.scripts]
codebase-rag = "codebase_rag:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_rag"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
# Strict checks for None handling
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
# Catch possibly unbound variables
reportPossiblyUnboundVariable = "error"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
